# cmake-template-repository

./: .clang-format  CMakeLists.txt  README.md
cmake/: dependency.cmake
internal/: CMakeLists.txt
src/: CMakeLists.txt  directories.hpp.in
src/client/: CMakeLists.txt
test/: CMakeLists.txt
